--- a/chat2.html
+++ b/chat2.html
@@ -197,25 +197,6 @@
                       </div>
                       <div class="col-10 " style="padding-left: 0px;">
                         <b style="font-size: 13px;">Admin</b>
-                          <br>
-                        <div class="chat-bubble chat-bubble--left">
-                          Hello dude!
-                        </div>
-                      </div>
-                    </div>
-                    <p class="time-left">Wed, 10:31 AM</p>
-                  </div>
-                </div>
-
-                   <div class="row no-gutters">
-                  <div class="col-md-12">
-                    <div class="row">
-                      <div class="col-2 ">
-                        <img src="image/1.png" class="rounded-circle " style="margin-top: 25px;margin-left: 15 px;"
-                          width=30px" alt="">
-                      </div>
-                      <div class="col-10 " style="padding-left: 0px;">
-                        <b style="font-size: 13px;">Admin</b>
                         <br>
                         <div class="chat-bubble chat-bubble--left">
                           Hello dude!
@@ -225,7 +206,7 @@
                     <p class="time-left">Wed, 10:31 AM</p>
                   </div>
                 </div>
-                
+
                 <div class="row no-gutters">
                   <div class="col-md-12">
                     <div class="row">
@@ -245,58 +226,74 @@
                   </div>
                 </div>
 
-
                 <div class="row no-gutters">
-                  <div class="col-md-12 ">            
-                      <div class="row">
-                        <div class="col-12">
-                          <b style="float: right;margin-right: 2%;">User</b>
-                        </div>
-                      </div>                           
-                    <div class="row " >
-                      <div class="col-12">
-                        <div class="chat-bubble chat-bubble--right">
-                          jhagdajsdg
-                        </div>
-                      </div>                     
-                    </div>
+                  <div class="col-md-12">
                     <div class="row">
-                      <div class="col-12">
-                        <p class="time-right">Wed, 10:31 AM</p>
-                      </div> 
-                    </div>                       
+                      <div class="col-2 ">
+                        <img src="image/1.png" class="rounded-circle " style="margin-top: 25px;margin-left: 15 px;"
+                          width=30px" alt="">
+                      </div>
+                      <div class="col-10 " style="padding-left: 0px;">
+                        <b style="font-size: 13px;">Admin</b>
+                        <br>
+                        <div class="chat-bubble chat-bubble--left">
+                          Hello dude!
+                        </div>
+                      </div>
+                    </div>
+                    <p class="time-left">Wed, 10:31 AM</p>
                   </div>
                 </div>
-                
+
+
                 <div class="row no-gutters">
-                  <div class="col-md-12 ">            
-                      <div class="row">
-                        <div class="col-12">
-                          <b style="float: right;margin-right: 2%;">User</b>
-                        </div>
-                      </div>                           
-                    <div class="row " >
+                  <div class="col-md-12 ">
+                    <div class="row">
+                      <div class="col-12">
+                        <b style="float: right;margin-right: 2%;">User</b>
+                      </div>
+                    </div>
+                    <div class="row ">
                       <div class="col-12">
                         <div class="chat-bubble chat-bubble--right">
-                        <img src="image/1.png" alt="">
+                          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Optio sequi illum qui dolores rerum
+                          nobis nihil, non debitis dolorum cumque provident impedit harum tenetur quod maiores cum.
+                          Itaque, illo ab!
                         </div>
-                      </div>                     
+                      </div>
                     </div>
                     <div class="row">
                       <div class="col-12">
                         <p class="time-right">Wed, 10:31 AM</p>
-                      </div> 
-                    </div>                       
+                      </div>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="row no-gutters">
+                  <div class="col-md-12 ">
+                    <div class="row">
+                      <div class="col-12">
+                        <b style="float: right;margin-right: 2%;">User</b>
+                      </div>
+                    </div>
+                    <div class="row ">
+                      <div class="col-12">
+                        <div class="chat-bubble chat-bubble--right">
+                          <img src="image/1.png" alt="">
+                        </div>
+                      </div>
+                    </div>
+                    <div class="row">
+                      <div class="col-12">
+                        <p class="time-right">Wed, 10:31 AM</p>
+                      </div>
+                    </div>
                   </div>
                 </div>
               </div>
-
             </div>
-
           </div>
-
-
-
         </div>
         <div class="col-12 footer ">
           <div class="row">
@@ -305,7 +302,6 @@
                 style="padding: 0%;width: 100%;border-radius: 5px;margin-top: 10px;height: 35px;"
                 placeholder="Type your message here..." id="">
             </div>
-
             <div class="col-2 ">
               <span class="settings-tray--right">
                 <div class="image-upload">
@@ -316,20 +312,16 @@
                 </div>
               </span>
             </div>
-
             <div class="col-2 ">
               <span class="settings-tray--right">
                 <div class="image-upload">
-
                   <i class="far fa-grin fa-7x" style="padding: 15px 8px 8px 8px;"></i>
-
                 </div>
               </span>
             </div>
           </div>
     </form>
   </div>
-
 
 
   <script src="js.js"></script>
